<resources>
    <string name="app_name">HH-Quickly-Searcher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- bottom navigation menu-->
    <string name="team">Команда</string>
    <string name="favorites">Избранное</string>
    <string name="main">Главная</string>
    <!-- toolbar title-->
    <string name="search_vacancy">Поиск вакансий</string>
    <string name="vacancy">Вакансия</string>
    <string name="vacancy_title">Вакансия\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="choosing_industry">Выбор отрасли</string>
    <string name="choosing_work_territory">Выбор места работы</string>
    <string name="choosing_region">Выбор региона</string>
    <string name="choosing_country">Выбор страны</string>
    <!-- placeholders-->
    <string name="no_internet">Нет интернета</string>
    <string name="could_not_get_vacancies_list">Не удалось получить\nсписок вакансий</string>
    <string name="no_region">Такого региона нет</string>
    <string name="could_not_get_list">Не удалось получить список</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="vacancy_was_not_found_or_deleted">Вакансия не найдена или\nудалена</string>
    <!-- buttons-->
    <string name="apply">Применить</string>
    <string name="select">Выбрать</string>
    <!-- team fragment-->
    <string name="have_been_working_app">Над приложением\nработали</string>
    <string name="team_name_liza">Евсюкова Елизавета Валерьевна</string>
    <string name="team_name_sasha">Рогалева Александра Евгеньевна</string>
    <string name="team_name_lesha">Писаный Алексей Андреевич</string>
    <string name="team_name_dima">Волков Дмитрий Вячеславович</string>
    <!-- search fragment-->
    <string name="enter_request">Введите запрос</string>
    <string name="response_search_empty">Таких вакансий нет</string>
    <string name="search_result_count">Найдено %s вакансий</string>
    <string name="paging_network_error">Проверьте подключение к интернету</string>
    <!-- favorites fragment-->
    <!-- filters fragment-->
    <string name="work_territory">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="reset">Сбросить</string>
    <!-- work territories fragment-->
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <!-- regions fragment-->
    <string name="enter_region">Введите регион</string>
    <!-- industries fragment-->
    <string name="enter_industry">Введите отрасль</string>
    <!-- vacancy details fragment-->
    <string name="share">Поделиться</string>
    <string name="necessary_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="salary_is_not_said">зарплата не указана</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="test_item_name_vacancy">Android-разработчик, Москва</string>
    <string name="test_name_employer">Маркет</string>
    <string name="test_salary">от 1 500 $</string>
    <string name="vacancy_key_skills">Ключевые навыки</string>
    <string name="sharing_title">Выберите способ отправки</string>
    <string name="empty_industry_list">Такой отрасли нет</string>
</resources>
